# client

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: general.yml  release.yml
examples/: LoginDemo.ipynb  load_dataset.ipynb  login_demo.ipynb
notia/: __init__.py  api.py  apikey.py  config.py  display.py  download_manager.py  login.py
notia/errors/: __init__.py
notia/models/: __init__.py  dataset.py  order.py
tests/: test_api.py  test_apikey.py  test_download_manager.py  test_login.py
