[tool.poetry]
name = "notia"
version = "0.3.0"
description = "A library for interacting with the Notia.ai platform"
keywords = ["machine learning", "datasets"]
authors = ["Notia.ai"]
readme = "README.md"
homepage = "https://notia.ai"
repository = "https://github.com/notia-ai/client"

[tool.poetry.dependencies]
python = "^3.7"
pyarrow = "^6.0.0"
aiohttp = "^3.8.0"
click = "^8.0.3"
rich = "^12.2.0"
requests = "^2.27.1"
pydantic = "^1.9.0"
ipywidgets = "^7.7.0"
pytest = "^7.1.1"
responses = "^0.20.0"
pytest-cov = "^3.0.0"
pandas = "^1.4.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ipykernel = "^6.7.0"
notebook = "^6.4.7"
jupyterthemes = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
